--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>｜北野エースWEB SHOP</title>
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./assets/css/style.css">
         <style>
             .pf_header {
@@ -36,8 +37,7 @@
                 }
             }
         </style>
-        <script>(function(d){var config = {kitId:'wku2cgo',scriptTimeout:3000,async:true},h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)})(document);
-          </script>
+        <script>(function(d){var config = {kitId:'wku2cgo',scriptTimeout:3000,async:true},h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)})(document);</script>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" defer></script>
         <script src="./assets/js/script.js" defer></script>    
     </head>
@@ -47,7 +47,8 @@
         <div class="pf_header-bg"></div>
         <div class="pf-fv">
             <h1><img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/fv_title.webp" alt="贅沢ふりかけ"></h1>
-            <div><img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/fv_treat.svg" alt=""></div>
+            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/fv_treat.svg" alt="" class="pf-treat pf-sp">
+            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/responsive/fv_treat.svg" alt="" class="pf-treat pf-pc">
         </div>
         <main class="pf_main">
             <section class="pf-epilogue">
@@ -62,6 +63,165 @@
                     心も体も満たされます。
                 </p>
             </section>
+            <section class="pf-detail">
+                <article>
+                    <p class="catchcopy">
+                        パリパリザクザク食感<br>
+                        厳選タレの旨みと磯の香り
+                    </p>
+                    <div class="con">
+                        <h2>サムライ贅沢ふりかけ</h2>
+                        <p>全国ふりかけグランプリ2024 金賞受賞。一番摘みの有明海苔の豊かな旨味と高級青のりの芳醇な香りが主役。これら選りすぐりの海の恵みが、格別な磯の香りを織りなし、厳選された秘伝のタレと絶妙に調和します。</p>
+                        <p class="pf-price">&yen; <span>1,296</span> 税込</p>
+                        <a href="https://www.kitano-ace.jp/view/item/000000001619" class="pf-cta">商品を詳しく見る</a>
+                    </div>
+                </article>
+                <article>
+                    <p class="catchcopy">
+                        あごと鰹の削り節の旨みと<br>
+                        海苔の豊かな香り
+                    </p>
+                    <div class="con">
+                        <h2>あご入りたっぷり海苔めし</h2>
+                        <p>あご削り節のたん白な味わいと鰹削り節の旨み、海苔の磯の香りが食欲をそそります。温かいご飯にかけて、醤油をかければ具材が踊るぶっかけめし。冷奴や納豆のトッピング、うどんやサラダの具材としても大活躍です。</p>
+                        <p class="pf-price">&yen; <span>697</span> 税込</p>
+                        <a href="https://www.kitano-ace.jp/view/item/000000001595" class="pf-cta">商品を詳しく見る</a>
+                    </div>
+                </article>
+                <article>
+                    <p class="catchcopy">
+                        帆立がゴロゴロ！<br>
+                        香ばし醤油が食欲そそる
+                    </p>
+                    <div class="con">
+                        <h2>
+                            ゴロッと北海ホタテの<br>
+                            焦がし醤油ふりかけ
+                        </h2>
+                        <p>北海道産の干し貝柱と青森県産の帆立水煮を贅沢に使用した生タイプのふりかけ。しっとり食感で、濃厚な帆立を味わえます。ゴロっとした帆立がたっぷり入っており、まるで帆立焼きを食べているかのよう……！</p>
+                        <p class="pf-price">&yen; <span>647</span> 税込</p>
+                        <a href="https://www.kitano-ace.jp/view/item/000000001460" class="pf-cta">商品を詳しく見る</a>
+                    </div>
+                </article>
+                <article>
+                    <p class="catchcopy">
+                        たっぷりおかかと<br>
+                        海苔の風味がやみつきに
+                    </p>
+                    <div class="con">
+                        <h2>
+                            おかか好きにもたべてほしい<br>
+                            旨味ひろがるかつお節で<br>
+                            仕上げたやみつきのり
+                        </h2>
+                        <p>瀬戸内海産の風味豊かな海苔に、枕崎産かつお節で作った旨味たっぷりのおかかを混ぜ込みました。おかか好きにはたまらない、やみつきになる美味しさです。ご飯にはもちろん、卵焼きや焼きうどんにかけても絶品です。</p>
+                        <p class="pf-price">&yen; <span>431</span> 税込</p>
+                        <a href="https://www.kitano-ace.jp/view/item/000000001462" class="pf-cta">商品を詳しく見る</a>
+                    </div>
+                </article>
+                <article>
+                    <p class="catchcopy">
+                        厳選された良質な素材<br>
+                        食文化を受け継いだ老舗の味
+                    </p>
+                    <div class="con">
+                        <h2>しそわかめ</h2>
+                        <p>厳選された良質なわかめを使い、素材本来の味を生かして丁寧に加工しました。しその爽やかな香りと、わかめの優しい味わいが絶妙なバランス。ご飯のお供にはもちろん、お弁当や贈り物にも喜ばれる一品です。</p>
+                        <p class="pf-price">&yen; <span>497</span> 税込</p>
+                        <a href="https://www.kitano-ace.jp/view/item/000000000800" class="pf-cta">商品を詳しく見る</a>
+                    </div>
+                </article>
+                <article>
+                    <p class="catchcopy">
+                        爽やかな梅味と赤しそに<br>
+                        とろける昆布の旨み
+                    </p>
+                    <div class="con">
+                        <h2>ねばっとろふりかけ梅</h2>
+                        <p>国産昆布のとろろ昆布を使用。乾燥させて粉砕することで、独特のねばっとろ食感を実現しました。梅味付きごま、赤しそ、乾燥梅の爽やかな酸味と味わいが特徴。まずは炊きたてのご飯にかけてお召し上がりください。</p>
+                        <p class="pf-price">&yen; <span>431</span> 税込</p>
+                        <a href="https://www.kitano-ace.jp/view/item/000000001607" class="pf-cta">商品を詳しく見る</a>
+                    </div>
+                </article>
+            </section>
+            <section class="pf-recommend">
+                <h2>おすすめ商品</h2>
+                <ul>
+                    <li>
+                        <a href="https://www.kitano-ace.jp/view/item/000000001201">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/1.webp" alt="">
+                            <h3>大人のための贅沢なごまドレッシング</h3>
+                            <p>&yen;<span>681</span> (税込)</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.kitano-ace.jp/view/item/000000001051">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2.webp" alt="">
+                            <h3>ごま油と塩にんにくの芳醇ドレッシング</h3>
+                            <p>&yen;<span>647</span> (税込)</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.kitano-ace.jp/view/item/000000001288">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/3.webp" alt="">
+                            <h3>玉ねぎのクリーミーフレンチドレッシング</h3>
+                            <p>&yen;<span>465</span> (税込)</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.kitano-ace.jp/view/item/000000001341">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/4.webp" alt="">
+                            <h3>和風シーザードレッシング</h3>
+                            <p>&yen;<span>647</span> (税込)</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.kitano-ace.jp/view/item/000000000282">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/5.webp" alt="">
+                            <h3>大人のためのシーザードレッシング</h3>
+                            <p>&yen;<span>594</span> (税込)</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.kitano-ace.jp/view/item/000000000761">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/6.webp" alt="">
+                            <h3>大人のためのたまねぎドレッシング</h3>
+                            <p>&yen;<span>746</span> (税込)</p>
+                        </a>
+                    </li>
+                </ul>
+                <a href="https://www.kitano-ace.jp/view/category/ct173" class="pf-cta">ご飯のお供をもっと見る</a>
+            </section>
+            <section class="pf-recommend pf-lp">
+                <h2>おすすめの特集</h2>
+                <ul>
+                    <li>
+                        <a href="https://www.kitano-ace.jp/view/category/kitanoselection">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/7.webp" alt="">
+                            <h3>キタノセレクション</h3>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.kitano-ace.jp/view/page/currybook">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/8.webp" alt="">
+                            <h3>カレーなる本棚&reg;</h3>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.kitano-ace.jp/view/page/onoeukon-kyettharhinspicy">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/9.webp" alt="">
+                            <h3>麻辣チェッターヒン</h3>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.kitano-ace.jp/view/page/onoeukon">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/10.webp" alt="">
+                            <h3>尾上右近さんおすすめカレー11選</h3>
+                        </a>
+                    </li>
+                </ul>
+                <a href="https://www.kitano-ace.jp/view/category/ct173" class="pf-cta">特集をもっと見る</a>
+            </section>    
         </main>
         <div class="pf_footer">Footer</div>
         
