--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>｜北野エースWEB SHOP</title>
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Noto+Serif+JP:wght@200..900&display=swap" rel="stylesheet">        <link rel="stylesheet" href="./assets/css/style.css">
         <style>
             .pf_header {
                 width: 100vw;
@@ -52,7 +51,7 @@
         </div>
         <main class="pf_main">
             <section class="pf-epilogue">
-                <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/epilogue_bg-test.webp" alt="">
+                <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/epilogue_bg.webp" alt="">
                 <h2>ごはんを主役に！</h2>
                 <p>
                     厳選された素材本来の旨味や<br>
@@ -66,81 +65,136 @@
             <section class="pf-detail">
                 <article>
                     <p class="catchcopy">
+                        <span><img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/catchcopy-treat.svg" alt=""></span>
                         パリパリザクザク食感<br>
                         厳選タレの旨みと磯の香り
+                        <span><img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/catchcopy-treat.svg" alt=""></span>
                     </p>
-                    <div class="con">
-                        <h2>サムライ贅沢ふりかけ</h2>
-                        <p>全国ふりかけグランプリ2024 金賞受賞。一番摘みの有明海苔の豊かな旨味と高級青のりの芳醇な香りが主役。これら選りすぐりの海の恵みが、格別な磯の香りを織りなし、厳選された秘伝のタレと絶妙に調和します。</p>
-                        <p class="pf-price">&yen; <span>1,296</span> 税込</p>
-                        <a href="https://www.kitano-ace.jp/view/item/000000001619" class="pf-cta">商品を詳しく見る</a>
+                    <div class="container">
+                        <div class="con">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/samurai_re.webp" alt="" class="bg">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/samurai_treat.svg" alt="" class="treat1">
+                        </div>
+                        <div class="con">
+                            <h2>サムライ贅沢ふりかけ</h2>
+                            <p>全国ふりかけグランプリ2024 金賞受賞。一番摘みの有明海苔の豊かな旨味と高級青のりの芳醇な香りが主役。これら選りすぐりの海の恵みが、格別な磯の香りを織りなし、厳選された秘伝のタレと絶妙に調和します。</p>
+                            <p class="pf-price"><span>&yen;</span>1,296<span>税込</span></p>
+                            <a href="https://www.kitano-ace.jp/view/item/000000001619" class="pf-cta">商品を詳しく見る</a>
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/samurai_treat.svg" alt="" class="treat2">
+                        </div>    
                     </div>
                 </article>
                 <article>
                     <p class="catchcopy">
+                        <span><img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/catchcopy-treat.svg" alt=""></span>
                         あごと鰹の削り節の旨みと<br>
                         海苔の豊かな香り
+                        <span><img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/catchcopy-treat.svg" alt=""></span>
                     </p>
-                    <div class="con">
-                        <h2>あご入りたっぷり海苔めし</h2>
-                        <p>あご削り節のたん白な味わいと鰹削り節の旨み、海苔の磯の香りが食欲をそそります。温かいご飯にかけて、醤油をかければ具材が踊るぶっかけめし。冷奴や納豆のトッピング、うどんやサラダの具材としても大活躍です。</p>
-                        <p class="pf-price">&yen; <span>697</span> 税込</p>
-                        <a href="https://www.kitano-ace.jp/view/item/000000001595" class="pf-cta">商品を詳しく見る</a>
+                    <div class="container">
+                        <div class="con">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/agoirinori.webp" alt="" class="bg">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/agoirinori_treat.svg" alt="" class="treat1">
+                        </div>
+                        <div class="con">
+                            <h2>あご入りたっぷり海苔めし</h2>
+                            <p>あご削り節のたん白な味わいと鰹削り節の旨み、海苔の磯の香りが食欲をそそります。温かいご飯にかけて、醤油をかければ具材が踊るぶっかけめし。冷奴や納豆のトッピング、うどんやサラダの具材としても大活躍です。</p>
+                            <p class="pf-price"><span>&yen;</span>697<span>税込</span></p>
+                            <a href="https://www.kitano-ace.jp/view/item/000000001595" class="pf-cta">商品を詳しく見る</a>
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/agoirinori_treat.svg" alt="" class="treat2">
+                        </div>    
                     </div>
                 </article>
                 <article>
                     <p class="catchcopy">
+                        <span><img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/catchcopy-treat.svg" alt=""></span>
                         帆立がゴロゴロ！<br>
                         香ばし醤油が食欲そそる
+                        <span><img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/catchcopy-treat.svg" alt=""></span>
                     </p>
-                    <div class="con">
-                        <h2>
-                            ゴロッと北海ホタテの<br>
-                            焦がし醤油ふりかけ
-                        </h2>
-                        <p>北海道産の干し貝柱と青森県産の帆立水煮を贅沢に使用した生タイプのふりかけ。しっとり食感で、濃厚な帆立を味わえます。ゴロっとした帆立がたっぷり入っており、まるで帆立焼きを食べているかのよう……！</p>
-                        <p class="pf-price">&yen; <span>647</span> 税込</p>
-                        <a href="https://www.kitano-ace.jp/view/item/000000001460" class="pf-cta">商品を詳しく見る</a>
+                    <div class="container">
+                        <div class="con">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/gorottohotate.webp" alt="" class="bg">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/gorottohotate_treat.svg" alt="" class="treat1">
+                        </div>
+                        <div class="con">
+                            <h2>
+                                ゴロッと北海ホタテの<br>
+                                焦がし醤油ふりかけ
+                            </h2>
+                            <p>北海道産の干し貝柱と青森県産の帆立水煮を贅沢に使用した生タイプのふりかけ。しっとり食感で、濃厚な帆立を味わえます。ゴロっとした帆立がたっぷり入っており、まるで帆立焼きを食べているかのよう……！</p>
+                            <p class="pf-price"><span>&yen;</span>647<span>税込</span></p>
+                            <a href="https://www.kitano-ace.jp/view/item/000000001460" class="pf-cta">商品を詳しく見る</a>
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/gorottohotate_treat.svg" alt="" class="treat2">
+                        </div>    
                     </div>
                 </article>
                 <article>
                     <p class="catchcopy">
+                        <span><img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/catchcopy-treat.svg" alt=""></span>
                         たっぷりおかかと<br>
                         海苔の風味がやみつきに
+                        <span><img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/catchcopy-treat.svg" alt=""></span>
                     </p>
-                    <div class="con">
-                        <h2>
-                            おかか好きにもたべてほしい<br>
-                            旨味ひろがるかつお節で<br>
-                            仕上げたやみつきのり
-                        </h2>
-                        <p>瀬戸内海産の風味豊かな海苔に、枕崎産かつお節で作った旨味たっぷりのおかかを混ぜ込みました。おかか好きにはたまらない、やみつきになる美味しさです。ご飯にはもちろん、卵焼きや焼きうどんにかけても絶品です。</p>
-                        <p class="pf-price">&yen; <span>431</span> 税込</p>
-                        <a href="https://www.kitano-ace.jp/view/item/000000001462" class="pf-cta">商品を詳しく見る</a>
+                    <div class="container">
+                        <div class="con">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/yamitsukinori.webp" alt="" class="bg">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/yamitsukinori_treat.svg" alt="" class="treat1">
+                        </div>
+                        <div class="con">
+                            <h2>
+                                おかか好きにもたべてほしい<br>
+                                旨味ひろがるかつお節で<br>
+                                仕上げたやみつきのり
+                            </h2>
+                            <p>瀬戸内海産の風味豊かな海苔に、枕崎産かつお節で作った旨味たっぷりのおかかを混ぜ込みました。おかか好きにはたまらない、やみつきになる美味しさです。ご飯にはもちろん、卵焼きや焼きうどんにかけても絶品です。</p>
+                            <p class="pf-price"><span>&yen;</span>431<span>税込</span></p>
+                            <a href="https://www.kitano-ace.jp/view/item/000000001462" class="pf-cta">商品を詳しく見る</a>
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/yamitsukinori_treat.svg" alt="" class="treat2">
+                        </div>    
                     </div>
                 </article>
                 <article>
                     <p class="catchcopy">
+                        <span><img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/catchcopy-treat.svg" alt=""></span>
                         厳選された良質な素材<br>
                         食文化を受け継いだ老舗の味
+                        <span><img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/catchcopy-treat.svg" alt=""></span>
                     </p>
-                    <div class="con">
-                        <h2>しそわかめ</h2>
-                        <p>厳選された良質なわかめを使い、素材本来の味を生かして丁寧に加工しました。しその爽やかな香りと、わかめの優しい味わいが絶妙なバランス。ご飯のお供にはもちろん、お弁当や贈り物にも喜ばれる一品です。</p>
-                        <p class="pf-price">&yen; <span>497</span> 税込</p>
-                        <a href="https://www.kitano-ace.jp/view/item/000000000800" class="pf-cta">商品を詳しく見る</a>
+                    <div class="container">
+                        <div class="con">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/shisowakame.webp" alt="" class="bg">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/shisowakame_treat.svg" alt="" class="treat1">
+                        </div>
+                        <div class="con">
+                            <h2>しそわかめ</h2>
+                            <p>厳選された良質なわかめを使い、素材本来の味を生かして丁寧に加工しました。しその爽やかな香りと、わかめの優しい味わいが絶妙なバランス。ご飯のお供にはもちろん、お弁当や贈り物にも喜ばれる一品です。</p>
+                            <p class="pf-price"><span>&yen;</span>497<span>税込</span></p>
+                            <a href="https://www.kitano-ace.jp/view/item/000000000800" class="pf-cta">商品を詳しく見る</a>
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/shisowakame_treat.svg" alt="" class="treat2">
+                        </div>    
                     </div>
                 </article>
                 <article>
                     <p class="catchcopy">
+                        <span><img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/catchcopy-treat.svg" alt=""></span>
                         爽やかな梅味と赤しそに<br>
                         とろける昆布の旨み
+                        <span><img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/catchcopy-treat.svg" alt=""></span>
                     </p>
-                    <div class="con">
-                        <h2>ねばっとろふりかけ梅</h2>
-                        <p>国産昆布のとろろ昆布を使用。乾燥させて粉砕することで、独特のねばっとろ食感を実現しました。梅味付きごま、赤しそ、乾燥梅の爽やかな酸味と味わいが特徴。まずは炊きたてのご飯にかけてお召し上がりください。</p>
-                        <p class="pf-price">&yen; <span>431</span> 税込</p>
-                        <a href="https://www.kitano-ace.jp/view/item/000000001607" class="pf-cta">商品を詳しく見る</a>
+                    <div class="container">
+                        <div class="con">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/nebattoroume.webp" alt="" class="bg">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/nebattoroume_treat.svg" alt="" class="treat1">
+                        </div>
+                        <div class="con">
+                            <h2>ねばっとろふりかけ梅</h2>
+                            <p>国産昆布のとろろ昆布を使用。乾燥させて粉砕することで、独特のねばっとろ食感を実現しました。梅味付きごま、赤しそ、乾燥梅の爽やかな酸味と味わいが特徴。まずは炊きたてのご飯にかけてお召し上がりください。</p>
+                            <p class="pf-price"><span>&yen;</span>431<span>税込</span></p>
+                            <a href="https://www.kitano-ace.jp/view/item/000000001607" class="pf-cta">商品を詳しく見る</a>
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/nebattoroume_treat.svg" alt="" class="treat2">
+                        </div>
+    
                     </div>
                 </article>
             </section>
