--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         </div>
                         <div class="con">
                             <h2>
-                                ゴロッと北海ホタテの<br>
+                                ゴロっと北海ホタテの<br>
                                 焦がし醤油ふりかけ
                             </h2>
                             <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/line.svg" alt="" class="pf-line">
@@ -253,7 +253,7 @@
                         </a>
                     </li>
                 </ul>
-                <a href="https://www.kitano-ace.jp/view/category/ct173" class="pf-cta">ご飯のお供をもっと見る</a>
+                <a href="https://www.kitano-ace.jp/view/category/meshitomo" class="pf-cta">ご飯のお供をもっと見る</a>
             </section>
             <section class="pf-recommend pf-lp">
                 <h2>おすすめの特集</h2>
@@ -261,7 +261,7 @@
                     <li>
                         <a href="https://www.kitano-ace.jp/view/category/kitanoselection">
                             <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/lp1.webp" alt="">
-                            <h3>北野エースだけのオリジナル商品</h3>
+                            <h3>キタノセレクション</h3>
                         </a>
                     </li>
                     <li>
