--- a/upload.html
+++ b/upload.html
@@ -11,7 +11,7 @@
     <link rel="canonical" href="https://www.kitano-ace.jp/view/page/premiumfurikake">
 <{$module.meta_center1}>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Noto+Serif+JP:wght@200..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/css/style5.css">
+    <link rel="stylesheet" href="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/css/style6.css">
     <style>html body{overflow-x:hidden;}h1,h2,h3,p,li,a{letter-spacing:.04em;line-height:150%;}header .top-nav{height:70px;}header .nav-menu a,html body .nd .nd_container .nd_search li input,html body .nd .nd_container .nd_search li select,header .postage p,.footer-nav li a,.footer-text span,.copyright{letter-spacing:0;line-height:1.6;}header .postage p{font-size:13px;}.footer-nav li a,.footer-text,.footer-text span{font-size:14px;}.copyright{font-size:12px;}.pf_main h2,.pf_main p{font-weight:initial;line-height:150%;}.pf-detail article .con:nth-of-type(2) .pf-price span{font-weight:400;line-height:150%;}.pf-detail article .con:nth-of-type(2) .pf-price span:nth-of-type(1){transform:translateY(-3.5px) !important;}.pf-detail article .con:nth-of-type(2) .pf-price span:nth-of-type(2){transform:translateY(-5px) !important;}.bnav-li-container{bottom:-14px;}.footer-text{letter-spacing:0;}.footer-nav li{line-height:1.2;}.pf-cta:hover{opacity:1;}@media screen and (min-width:768px){.pf-fv{margin-top:140px;}ul.nav-contact li {font-size:14px;letter-spacing:0;line-height:1.6;}.bnav li a, .bnav li p {font-weight:bold;font-size:14px;letter-spacing:0;line-height:1.6;}}</style>
 <{$module.meta_center2}>
     <script>(function(d){var config = {kitId:'wku2cgo',scriptTimeout:3000,async:true},h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)})(document);</script>
@@ -101,7 +101,7 @@
                     </div>
                     <div class="con">
                         <h2>
-                            ゴロッと北海ホタテの<br>
+                            ゴロっと北海ホタテの<br>
                             焦がし醤油ふりかけ
                         </h2>
                         <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/line.svg" alt="" class="pf-line">
@@ -230,7 +230,7 @@
                     </a>
                 </li>
             </ul>
-            <a href="https://www.kitano-ace.jp/view/category/ct173" class="pf-cta">ご飯のお供をもっと見る</a>
+            <a href="https://www.kitano-ace.jp/view/category/meshitomo" class="pf-cta">ご飯のお供をもっと見る</a>
         </section>
         <section class="pf-recommend pf-lp">
             <h2>おすすめの特集</h2>
@@ -238,7 +238,7 @@
                 <li>
                     <a href="https://www.kitano-ace.jp/view/category/kitanoselection">
                         <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/lp1.webp" alt="">
-                        <h3>北野エースだけのオリジナル商品</h3>
+                        <h3>キタノセレクション</h3>
                     </a>
                 </li>
                 <li>
